--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
 					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
+			<plugin>
+                             <artifactId>maven-war-plugin</artifactId>
+                             <version>3.0.0</version>
+                        </plugin>
+
 
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
