--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
@@ -94,14 +94,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.110.177.97:8081/repository/flipkart-release/</url>
+	      <name>Releases Nexus Repository</name>
+	      <url>http://13.126.181.55:8081/repository/wallmart-release-repo/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.110.177.97:8081/repository/flipkart-snapshot/</url>
+	      <name>Snapshot Nexus Repository </name>
+	      <url>http://13.126.181.55:8081/repository/wallmart-snapshot-repo/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
@@ -119,11 +119,6 @@
 					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
-			<plugin>
-                             <artifactId>maven-war-plugin</artifactId>
-                             <version>3.0.0</version>
-                        </plugin>
-
 
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
@@ -154,4 +149,3 @@
 	
 	
 </project>
-
