--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,6 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://65.0.135.73:9000/</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -97,14 +94,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.110.177.97:8081/repository/flipkart-release/</url>
+	      <name>Releases Nexus Repository</name>
+	      <url>http://13.126.181.55:8081/repository/wallmart-release-repo/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.110.177.97:8081/repository/flipkart-snapshot/</url>
+	      <name>Snapshot Nexus Repository </name>
+	      <url>http://13.126.181.55:8081/repository/wallmart-snapshot-repo/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
@@ -122,11 +119,6 @@
 					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
-			<plugin>
-                             <artifactId>maven-war-plugin</artifactId>
-                             <version>3.0.0</version>
-                        </plugin>
-
 
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
@@ -157,4 +149,3 @@
 	
 	
 </project>
-
